crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__omp__2026-07-10T18-00-00-000Z_01990000-0000-7000-8000-000000000001.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- SessionStart:
    agent_id: 15994559954055168040
    source: omp
    session_id: 2026-07-10T18-00-00-000Z_01990000-0000-7000-8000-000000000001/FixtureCaptureChild
    cwd: /home/user/demo-project
    parent_id: 10340979680718815602
- ModelInfo:
    agent_id: 15994559954055168040
    model: kimi-for-coding
    effort: ~
- Usage:
    agent_id: 15994559954055168040
    fresh_tokens: 22384
- ActivityStart:
    agent_id: 15994559954055168040
    tool_use_id: tool_AAAAAAAAAAAAAAAAAAAAAAAA
    detail:
      Generic:
        display: "read: Cargo.toml"
- ActivityEnd:
    agent_id: 15994559954055168040
    tool_use_id: tool_AAAAAAAAAAAAAAAAAAAAAAAA
- ModelInfo:
    agent_id: 15994559954055168040
    model: kimi-for-coding
    effort: ~
- Usage:
    agent_id: 15994559954055168040
    fresh_tokens: 790
- ModelInfo:
    agent_id: 15994559954055168040
    model: kimi-for-coding
    effort: ~
- Usage:
    agent_id: 15994559954055168040
    fresh_tokens: 389
- ActivityStart:
    agent_id: 15994559954055168040
    tool_use_id: tool_BBBBBBBBBBBBBBBBBBBBBBBB
    detail:
      Generic:
        display: yield
- ActivityEnd:
    agent_id: 15994559954055168040
    tool_use_id: tool_BBBBBBBBBBBBBBBBBBBBBBBB
