crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__omp__approval-recorded.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- Rename:
    agent_id: 10175610894441170726
    label: om·Run echo hi command
- SessionStart:
    agent_id: 10175610894441170726
    source: omp
    session_id: 2026-08-31T06-57-31-359Z_01a0569b-e0df-7605-8f1b-68b272b96186
    cwd: /tmp/pixtuoid-capture/proj
    parent_id: ~
- ModelInfo:
    agent_id: 10175610894441170726
    model: ~
    effort: high
- Rename:
    agent_id: 10175610894441170726
    label: om·Run echo hi command
- ModelInfo:
    agent_id: 10175610894441170726
    model: deepseek-v4-flash
    effort: ~
- Usage:
    agent_id: 10175610894441170726
    fresh_tokens: 5952
- ActivityStart:
    agent_id: 10175610894441170726
    tool_use_id: call_00_ET_vNRZj4jj7DB3S4qy0EQr5843
    detail:
      Generic:
        display: "bash: echo hi"
- ActivityEnd:
    agent_id: 10175610894441170726
    tool_use_id: call_00_ET_vNRZj4jj7DB3S4qy0EQr5843
- ModelInfo:
    agent_id: 10175610894441170726
    model: deepseek-v4-flash
    effort: ~
- Usage:
    agent_id: 10175610894441170726
    fresh_tokens: 88
- SessionEnd:
    agent_id: 10175610894441170726
    as_child: false
- SessionStart:
    agent_id: 10175610894441170726
    source: omp
    session_id: 2026-08-31T06-57-31-359Z_01a0569b-e0df-7605-8f1b-68b272b96186
    cwd: /tmp/pixtuoid-capture/proj
    parent_id: ~
- Identity:
    agent_id: 10175610894441170726
    source: omp
    session_id: 2026-08-31T06-57-31-359Z_01a0569b-e0df-7605-8f1b-68b272b96186
    cwd: /tmp/pixtuoid-capture/proj
- Waiting:
    agent_id: 10175610894441170726
    reason: bash
    tool_use_id: call_00_ET_vNRZj4jj7DB3S4qy0EQr5843
- Identity:
    agent_id: 10175610894441170726
    source: omp
    session_id: 2026-08-31T06-57-31-359Z_01a0569b-e0df-7605-8f1b-68b272b96186
    cwd: /tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 10175610894441170726
    tool_use_id: call_00_ET_vNRZj4jj7DB3S4qy0EQr5843
    detail:
      Generic:
        display: bash
- SessionEnd:
    agent_id: 10175610894441170726
    as_child: false
