crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__omp__ask-recorded.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- SessionStart:
    agent_id: 4349876156057149153
    source: omp
    session_id: 2026-08-15T16-26-48-173Z_01a0063f-51ed-7000-9ec2-7c8d71b759ca
    cwd: /tmp/pixtuoid-capture/proj
    parent_id: ~
- ModelInfo:
    agent_id: 4349876156057149153
    model: ~
    effort: high
- ModelInfo:
    agent_id: 4349876156057149153
    model: deepseek-v4-flash
    effort: ~
- Usage:
    agent_id: 4349876156057149153
    fresh_tokens: 594
- ActivityStart:
    agent_id: 4349876156057149153
    tool_use_id: call_00_hiuykNHdR1ojkFiZXHfb4236
    detail:
      Generic:
        display: ask
- Waiting:
    agent_id: 4349876156057149153
    reason: What should NOTE.txt be renamed to?
- ActivityEnd:
    agent_id: 4349876156057149153
    tool_use_id: call_00_hiuykNHdR1ojkFiZXHfb4236
- SessionEnd:
    agent_id: 4349876156057149153
    as_child: false
- ModelInfo:
    agent_id: 4349876156057149153
    model: deepseek-v4-flash
    effort: ~
