crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__omp__tool-run-recorded.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- SessionStart:
    agent_id: 10083271890484720750
    source: omp
    session_id: 2026-09-19T18-16-13-370Z_01a0bae2-133a-769f-851a-927926fbca45
    cwd: /tmp/pixtuoid-capture/proj
    parent_id: ~
- ModelInfo:
    agent_id: 10083271890484720750
    model: ~
    effort: high
- ModelInfo:
    agent_id: 10083271890484720750
    model: deepseek-v4-flash
    effort: ~
- Usage:
    agent_id: 10083271890484720750
    fresh_tokens: 20876
- ActivityStart:
    agent_id: 10083271890484720750
    tool_use_id: call_00_ET_hsUWkzKKzPwMujrMGVSL4042
    detail:
      Generic:
        display: "read: NOTE.txt"
- ActivityStart:
    agent_id: 10083271890484720750
    tool_use_id: call_01_ET_K9SL0j5kdsVu5JJ0U7KA4502
    detail:
      Generic:
        display: "read: ."
- ActivityEnd:
    agent_id: 10083271890484720750
    tool_use_id: call_00_ET_hsUWkzKKzPwMujrMGVSL4042
- ActivityEnd:
    agent_id: 10083271890484720750
    tool_use_id: call_01_ET_K9SL0j5kdsVu5JJ0U7KA4502
- ModelInfo:
    agent_id: 10083271890484720750
    model: deepseek-v4-flash
    effort: ~
- Usage:
    agent_id: 10083271890484720750
    fresh_tokens: 392
- ActivityStart:
    agent_id: 10083271890484720750
    tool_use_id: call_00_FOrYEPfI0kRg5UEDXHpw0891
    detail:
      Generic:
        display: "read: NOTE.txt"
- ActivityEnd:
    agent_id: 10083271890484720750
    tool_use_id: call_00_FOrYEPfI0kRg5UEDXHpw0891
- ModelInfo:
    agent_id: 10083271890484720750
    model: deepseek-v4-flash
    effort: ~
- Usage:
    agent_id: 10083271890484720750
    fresh_tokens: 418
- SessionEnd:
    agent_id: 10083271890484720750
    as_child: false
